feat: added blocks header, page, links-list, navigation-link, light-link, section-subtitle, button-try-free; and modifiers: links-list_place_header, section-subtitle_place_header, links-list_place_menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
   <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
+  <div class="page">
+    <header class="header">
+      <section class="header__panel">
+        <img src="images/logo.svg" alt="" class="header__logo">
+        <ul class="links-list links-list_place_header">
+          <li><a href="" class="navigation-link">Home</a></li>
+          <li><a href="" class="navigation-link">Product</a></li>
+          <li><a href="" class="navigation-link">About</a></li>
+          <li><a href="" class="navigation-link">Contact</a></li>
+        </ul>
+        <div class="header__right-content">
+          <a class="light-link">Login</a>
+          <div class="header__burger-logo">
+            <span class="header__burger-line"></span>
+          </div>
+        </div>
+      </section>
+      <section class="header__content">
+        <h1 class="header__title">Work at the speed of thought</h1>
+        <h2 class="section-subtitle section-subtitle_place_header">Most calendars are designed for teams. Slate is designed for
+        freelancers who want a simple way to plan their schedule.</h2>
+        <div class="header__buttons-container">
+          <button class="button-try-free">Try For Free</button>
+          <a class="light-link light-link_size_big">Learn more</a>
+        </div>
+        <img src="images/header__image.png" alt="" class="header__image">
+        <div class="header__gradient"></div>
+      </section>
+    </header>
+    <nav class="header__menu">
+      <ul class="links-list links-list_place_menu">
+        <li><a href="" class="navigation-link">Home</a></li>
+        <li><a href="" class="navigation-link">Product</a></li>
+        <li><a href="" class="navigation-link">About</a></li>
+        <li><a href="" class="navigation-link">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="js/burger-menu.js"></script>
 </body>
 </html>
