fix: image in header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button class="button-try-free">Try For Free</button>
           <a class="light-link light-link_size_big">Learn more</a>
         </div>
-        <img src="images/header__image.png" alt="" class="header__image">
+        <div class="header__image"></div>
         <div class="header__gradient"></div>
       </section>
     </header>
