fix: changed adaptive in header__panel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="" class="navigation-link">Contact</a></li>
         </ul>
         <div class="header__right-content">
-          <a class="light-link">Login</a>
+          <a class="light-link light-link_place_header">Login</a>
           <div class="header__burger-logo">
             <span class="header__burger-line"></span>
           </div>
@@ -39,6 +39,7 @@
       </section>
     </header>
     <nav class="header__menu">
+      <a class="light-link">Login</a>
       <ul class="links-list links-list_place_menu">
         <li><a href="" class="navigation-link">Home</a></li>
         <li><a href="" class="navigation-link">Product</a></li>
