feat: added block features

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </section>
       <section class="header__content">
         <h1 class="header__title">Work at the speed of thought</h1>
-        <h2 class="section-subtitle section-subtitle_place_header">Most calendars are designed for teams. Slate is designed for
-        freelancers who want a simple way to plan their schedule.</h2>
+        <h3 class="section-subtitle section-subtitle_place_header">Most calendars are designed for teams. Slate is designed for
+        freelancers who want a simple way to plan their schedule.</h3>
         <div class="header__buttons-container">
           <button class="button-try-free">Try For Free</button>
           <a class="light-link light-link_size_big">Learn more</a>
@@ -47,6 +47,44 @@
         <li><a href="" class="navigation-link">Contact</a></li>
       </ul>
     </nav>
+    <main class="main">
+      <section class="features">
+        <h2 class="section-title section-title_place_features">Features</h2>
+        <h3 class="section-subtitle">Most calendars are designed for teams. Slate is designed for
+          freelancers who want a simple way to plan their schedule.</h3>
+        <div class="features__content">
+          <div class="features__images-box">
+            <img src="images/features__chat.png" alt="" class="features__chat">
+            <img src="images/features__line-chart.png" alt="" class="features__line-chart">
+          </div>
+          <ul class="features__text">
+            <li class="features__list">
+              <h3 class="features__title features__title_content-before_cutlery">A single source
+                of truth</h3>
+              <p class="features__paragraph">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+                </p>
+            </li>
+            <li class="features__list">
+              <h3 class="features__title features__title_content-before_aliens">Intuitive
+                interface</h3>
+              <p class="features__paragraph">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+                </p>
+            </li>
+            <li class="features__list">
+              <h3 class="features__title features__title_content-before_infinity">Or with rules</h3>
+              <p class="features__paragraph">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+                </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
