feat: added block contents

--- a/index.html
+++ b/index.html
@@ -84,6 +84,29 @@
           </ul>
         </div>
       </section>
+      <section class="contents">
+        <h2 class="section-title">Contents</h2>
+        <h3 class="section-subtitle">We focus on ergonomics and meeting you where you work.
+          It's only a keystroke away.</h3>
+        <div class="contents__content">
+          <div class="contents__card contents__card_elements_macbook">
+            <h4 class="contents__title">Work</h4>
+            <p class="contents__paragraph">Ever wondered if you're too reliant
+              on a client for work? Slate helps
+              you identify.</p>
+            <button class="button-try-free button-try-free_size_small button-try-free_margin_top">Sign up</button>
+            <img src="images/contents__image-macbook.png" alt="" class="contents__image-macbook">
+          </div>
+          <div class="contents__card contents__card_elements_boards">
+            <h4 class="contents__title">Design with real data</h4>
+            <p class="contents__paragraph">Ever wondered if you're too reliant
+              on a client for work? Slate helps
+              you identify .</p>
+            <button class="button-try-free button-try-free_size_small">Try For Free</button>
+            <img src="images/contents__image-boards.png" alt="" class="contents__image-boards">
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 
