feat: added block partners

--- a/index.html
+++ b/index.html
@@ -107,6 +107,46 @@
           </div>
         </div>
       </section>
+      <section class="partners">
+        <h2 class="section-title">Partners</h2>
+        <h3 class="section-subtitle">We focus on ergonomics and meeting you where you work.
+          It's only a keystroke away.</h3>
+        <div class="partners__content">
+          <ul class="partners__list">
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__app-store.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__apiary.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__android.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__basecamp.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__airbnb.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="">
+                <img src="images/partners__ibm.svg" alt="" class="partners__icon">
+              </a>
+            </li>
+          </ul>
+          <a class="light-link">All Partners</a>
+        </div>
+      </section>
     </main>
   </div>
 
