feat: added block gallery

--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
           </div>
         </div>
       </section>
+      <section class="gallery">
+        <h2 class="section-title">Gallery</h2>
+        <h3 class="section-subtitle">We focus on ergonomics and meeting you where you work.
+          It's only a keystroke away.</h3>
+        <div class="photo-grid">
+          <img src="images/photo-grid__image1.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image2.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image3.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image4.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image5.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image6.png" alt="" class="photo-grid__image">
+          <img src="images/photo-grid__image7.png" alt="" class="photo-grid__image">
+        </div>
+        <a class="light-link">All Partners</a>
+      </section>
       <section class="partners">
         <h2 class="section-title">Partners</h2>
         <h3 class="section-subtitle">We focus on ergonomics and meeting you where you work.
