feat: added block footer

--- a/index.html
+++ b/index.html
@@ -163,6 +163,48 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__content">
+          <div class="footer__one-list">
+            <h3 class="footer__title">Fingertipe</h3>
+            <ul class="links-list links-list_place_footer">
+              <li><a href="" class="navigation-link">Home</a></li>
+              <li><a href="" class="navigation-link">Examples</a></li>
+              <li><a href="" class="navigation-link">Pricing</a></li>
+              <li><a href="" class="navigation-link">Updates</a></li>
+            </ul>
+          </div>
+          <div class="footer__one-list">
+            <h3 class="footer__title">Resources</h3>
+            <ul class="links-list links-list_place_footer">
+              <li><a href="" class="navigation-link">Home</a></li>
+              <li><a href="" class="navigation-link">Examples</a></li>
+              <li><a href="" class="navigation-link">Pricing</a></li>
+              <li><a href="" class="navigation-link">Updates</a></li>
+            </ul>
+          </div>
+          <div class="footer__one-list">
+            <h3 class="footer__title">About</h3>
+            <ul class="links-list links-list_place_footer">
+              <li><a href="" class="navigation-link">Home</a></li>
+              <li><a href="" class="navigation-link">Examples</a></li>
+              <li><a href="" class="navigation-link">Pricing</a></li>
+              <li><a href="" class="navigation-link">Updates</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__contacts">
+          <h3 class="footer__location">7480 Mockingbird Hill undefined </h3>
+          <h3 class="footer__phone">(239) 555-0108</h3>
+          <div class="footer__social-media">
+            <a href="" class="footer__social-link"><img src="images/twitter-icon.svg" alt="" class="footer__icon"></a>
+            <a href="" class="footer__social-link"><img src="images/facebook-icon.svg" alt="" class="footer__icon"></a>
+            <a href="" class="footer__social-link"><img src="images/linkedin-icon.svg" alt="" class="footer__icon"></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
