feat: added block advertisement

--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
           <a class="light-link">All Partners</a>
         </div>
       </section>
+      <section class="advertisement">
+        <div class="advertisement__content">
+          <h3 class="advertisement__title">OpenType features
+            and Variable fonts</h3>
+          <button class="button-try-free button-try-free_size_big">Try For Free</button>
+        </div>
+        <div class="advertisement__image"></div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
