feat: added block comments

--- a/index.html
+++ b/index.html
@@ -162,6 +162,72 @@
           <a class="light-link">All Partners</a>
         </div>
       </section>
+      <section class="comments">
+        <h2 class="section-title">Testimonials</h2>
+        <div class="comments__content">
+          <div class="comments__item">
+            <div class="comments__description">
+              <img src="images/comments__image1.png" alt="" class="comments__icon">
+              <div class="comments__author">
+                <h4 class="comments__author-text">Claire Bell</h4>
+                <h4 class="comments__author-text">Designer</h4>
+              </div>
+            </div>
+            <p class="comments__text">Slate helps you see how many more days
+              you need to work to reach your financial
+              goal for the month and year. Slate helps
+              you see how many more days
+              you need to work to reach your financial
+              goal for the month and year.your financial
+              goal for the month and year.</p>
+          </div>
+          <div class="comments__item">
+            <div class="comments__description">
+              <img src="images/comments__image2.png" alt="" class="comments__icon">
+              <div class="comments__author">
+                <h4 class="comments__author-text">Francisco Lane</h4>
+                <h4 class="comments__author-text">Designer</h4>
+              </div>
+            </div>
+            <p class="comments__text">Slate helps you see how many more days
+              you need to work to reach your financial
+              goal for the month and year. Slate helps
+              you see how many more days
+              you need to work to reach your financial
+              goal for the month and year.</p>
+          </div>
+          <div class="comments__item">
+            <div class="comments__description">
+              <img src="images/comments__image3.png" alt="" class="comments__icon">
+              <div class="comments__author">
+                <h4 class="comments__author-text">Ralph Fisher</h4>
+                <h4 class="comments__author-text">Designer</h4>
+              </div>
+            </div>
+            <p class="comments__text">Slate helps you see how many more days
+              you need to work to reach your financial
+              goal for the month and year. Slate helps
+              you see how many more days
+              you need to work to reach your financial
+              goal for the month and year.</p>
+          </div>
+          <div class="comments__item">
+            <div class="comments__description">
+              <img src="images/comments__image4.png" alt="" class="comments__icon">
+              <div class="comments__author">
+                <h4 class="comments__author-text">Jorge Murphy</h4>
+                <h4 class="comments__author-text">Designer</h4>
+              </div>
+            </div>
+            <p class="comments__text">Slate helps you see how many more days
+              you need to work to reach your financial
+              goal for the month and year. Slate helps
+              you see how many more days
+              you need to work to reach your financial
+              goal for the month and year.</p>
+          </div>
+        </div>
+      </section>
       <section class="advertisement">
         <div class="advertisement__content">
           <h3 class="advertisement__title">OpenType features
